2003.02.07
  - fixed a stack overflow bug when using the fill tool on large images
  - removed the options dialog box from the editor
  - fix trigger activation so you can activate a trigger more than
    once on a map
  - make rawfile.read return a ByteArray object
  - redraw the map after ResizeAllLayers

2003.02.05
  - fixed GrabImage crash bug in standard16 and interpolate16
  - fixed: GrabImage in sphere_gl grabbed the wrong pixels (and
    inverted them too)

2003.02.04
  - fixed bug where phantom buttons would appear in tool palettes while
    resizing them
  - fixed bug where drawing gradient window styles in sphere_gl would
    leave a gap along the edge of the center
  - fixed bug where drawing a gradient rectangle before drawing any
    images would cause the gradient to not show up
  - open sounds in the editor as a stream so huge files don't take
    forever to load
  - moving between two adjacent triggers now activates the new one
    (this may be a regression from when I fixed the trigger detection
    to be pixel-perfect)
  - added IsLayerReflective and SetLayerReflective (Brian Robb)
  - fix GetCurrentMap() in map entry scripts
  - don't crash when loading a corrupt spriteset
  - added file_object.flush()
  - added links to web sites and documentation from the editor's help menu

2003.01.29
  - make ExecuteGame work no matter where the game calling it is
    located on the filesystem
  - fix bug where OpenRawFile('blah', true) wouldn't actually create
    the file
  - Added new functions to joysticks.js system script and improved old
    functions' robustness (Brian Robb)

2003.01.28
  - added Flik's joysticks.js system script
  - fixed the "person doesn't exist inside of 'on create' script" bug

2003.01.26
  - Sphere 1.0 beta 2 released.

2003.01.25
  - upgraded JS engine to 1.5 RC 5, which should improve framerates
    and fix a few crashes.
  - improved GetGameList() so that it returns author and description
    information as well